[tool.poetry]
name = "aio-cosmos"
version = "0.1.0"
description = "Ayncio Client for Azure Cosmos DB"
authors = ["Grant McDonald <https://github.com/calmseas>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-asyncio = "^0.16.0"
azure-cosmos = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
